--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,5 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Baloo2-Bold', sans-serif;
+    font-family: 'Baloo 2', cursive;
 }
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+
