--- a/stylesheets/left-block/__navigation.css
+++ b/stylesheets/left-block/__navigation.css
@@ -4,12 +4,21 @@
     align-items: center;  
     margin-bottom: 20.9px;
     list-style-type: none;
+    cursor: pointer;
 }
 
 .navigation__icon {
     display: inline-block;
     padding: 22px 12px 14px 77px;
     border-radius: 0px 31.5px 31.5px 0px;
+    transition: all .2s;
+}
+
+.navigation__item:hover .navigation__icon {
+    margin-right: 15px;
+    padding-right: 27px;
+    background-color: #F9D44A;
+    transition: all .2s;
 }
 
 .active {
