--- a/stylesheets/central-block/discover-world/__dates.css
+++ b/stylesheets/central-block/discover-world/__dates.css
@@ -1,11 +1,11 @@
 .dates {
-    margin-top: 58px;
+    margin-top: 60px;
 }
 
 .dates-header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .dates-header__title {
@@ -16,7 +16,7 @@
 .dates-header__date {
     letter-spacing: 0.1px;
     margin-top: 4px;
-    padding: 10px 31px;
+    padding: 15px 30px;
     border: 1px solid #B4BCC4;
     border-radius: 24px;
 }
